[package]
name = "kernelstats"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
serde_derive = "1"
rayon = "1"
reqwest = "0.9"
flate2 = "1"
tar = "0.4"
clap = "2.32"
log = "0.4"
pretty_env_logger = "0.2"
