[package]
name = "kernelstats"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
tokio = {version = "1.13", features = ["full"]}
serde = "1"
serde_json = "1"
serde_yaml = "0.8.13"
serde_derive = "1"
reqwest = "0.10.8"
flate2 = "1.0.18"
tar = "0.4.36"
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0.33"
unicycle = "0.6.3"
